--- a/test_with_original_tags/index.html
+++ b/test_with_original_tags/index.html
@@ -1,104 +1,41 @@
 <!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="classless.css" />
-        <title>Document</title>
-    </head>
-    <body>
-        <ul>
-            <nav style="background-color: rgba(0, 0, 255, 0.13)">
-                <ol>
-                    <span><a href="" type="">Home</a></span>
-                    <span>Products</span>
-                    <span>Contact</span>
-                </ol>
-                <ol>
-                    <span>Menu1</span>
-                    <span>Menu2</span>
-                    <span>Menu3</span>
-                </ol>
-                <ol>
-                    <span>
-                        <input type="search" />
-                    </span>
-                    <span>
-                        <button type="button">Sign in</button>
-                    </span>
-                    <span>
-                        <button type="submit">Sign up</button>
-                    </span>
-                </ol>
-            </nav>
-            <ol>
-                <aside style="background-color: rgba(128, 0, 128, 0.089)">
-                    <ul>
-                        <span>Dashboard 1</span>
-                        <span>Dashboard 2</span>
-                    </ul>
-                </aside>
-                <main style="background-color: rgba(0, 128, 0, 0.171)">
-                    <strong>
-                        <center>
-                            <ul>
-                                <form action="submit">
-                                    <b>
-                                        <h1>Login</h1>
-                                    </b>
-                                    <ul>
-                                        <ol>
-                                            <label for="username"
-                                                >Username
-                                            </label>
-                                            <input type="text" id="username" />
-                                        </ol>
 
-                                        <ol>
-                                            <label for="password"
-                                                >Password
-                                            </label>
-                                            <input type="text" id="password" />
-                                        </ol>
-                                    </ul>
-                                    <b>
-                                        <ol>
-                                            <button type="Submit">Login</button
-                                            ><button type="reset">
-                                                Cancel
-                                            </button>
-                                        </ol>
-                                    </b>
-                                </form>
-                            </ul>
-                        </center>
-                        <div>
-                            <ul>
-                                <li><p>ul für flex col untereinander</p></li>
-                                <li><p>ol für flex row nebeneinander</p></li>
-                                <li><p>b für border</p></li>
-                                <li><p>center für justify-center</p></li>
-                                <li>
-                                    <p>strong für width 100%</p>
-                                </li>
-                            </ul>
-                        </div>
-                        <strong>
-                            <ol>
-                                <span style="background-color: aquamarine">
-                                    <div>1</div>
-                                </span>
-                                <div style="background-color: aqua">2</div>
-                                <span>
-                                    <div style="background-color: bisque">
-                                        3
-                                    </div>
-                                </span>
-                            </ol>
-                        </strong>
-                    </strong>
-                </main>
-            </ol>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="classless.css" />
+    <link rel="stylesheet" href="layout-dashboard.css" />
+    <title>Document</title>
+</head>
+
+<body>
+    <nav>
+        <ul>
+            <li>Home</li>
+            <li>Contact</li>
+            <li>Service</li>
         </ul>
-    </body>
+    </nav>
+    <aside>
+        <h2>Sidebar</h2>
+        <ul>
+            <li>Home</li>
+            <li>Contact</li>
+            <li>Service</li>
+        </ul>
+    </aside>
+    <main>
+        <h1>Heading 1</h1>
+        <p>Das ist mein Main content</p>
+    </main>
+    <footer>
+        <ul>
+            <li>Contact</li>
+            <li>Impressum</li>
+        </ul>
+    </footer>
+</body>
+
 </html>
