--- a/styles/index.html
+++ b/styles/index.html
@@ -4,9 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="layout.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="components/global.css">
+    <link rel="stylesheet" href="components/buttons.css">
+    <link rel="stylesheet" href="components/forms.css">
+    <link rel="stylesheet" href="layouts/layout-login.css">
+    <title>My login form</title>
 </head>
 
 <body>
