--- a/sites/products/index.html
+++ b/sites/products/index.html
@@ -17,10 +17,19 @@
     </head>
     <body>
         <header>
-            <a href="/"><img src="/images/logoipsum-331.svg" /></a>
             <ul>
-                <li><span>Here the Name </span></li>
-                <li><span>and here the Slogan of the side</span></li>
+                <li>
+                    <a href="/"><img src="/images/logoipsum-331.svg" /></a>
+                </li>
+                <li><span>hTag</span></li>
+                <li>
+                    <span
+                        >Fast and Simple, Responsive MVP Design Templates</span
+                    >
+                </li>
+            </ul>
+            <ul>
+                <li></li>
             </ul>
         </header>
         <nav>
@@ -69,8 +78,10 @@
                         name="password"
                         placeholder="Password"
                     />
-
-                    <button type="submit">Login</button>
+                    <div>
+                        <button type="submit">Login</button>
+                        <a href="/"><button type="button">Cancel</button></a>
+                    </div>
                     <p>
                         Not a Member<a href="/sites/cores/register/index.html"
                             >Register</a
@@ -97,7 +108,10 @@
                         name="passwordB"
                         placeholder="Repeat password"
                     />
-                    <button type="submit">Register</button>
+                    <div>
+                        <button type="submit">Register</button>
+                        <a href="/"><button type="button">Cancel</button></a>
+                    </div>
                     <p>
                         You are a Member<a href="/sites/cores/login/index.html"
                             >Login</a
@@ -111,12 +125,14 @@
                 <form action="#">
                     <label for="email">Email</label>
                     <input type="email" name="email" placeholder="Email" />
-                    <button type="submit">Send</button>
+                    <div>
+                        <button type="submit">Send</button>
+                        <a href="/"><button type="button">Cancel</button></a>
+                    </div>
                 </form>
             </div>
         </section>
         <footer>
-            <hr />
             <ul>
                 <li>Footer</li>
                 <li>Contact Us</li>
