--- a/component_based_css_test/index.html
+++ b/component_based_css_test/index.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="components/global.css">
-    <link rel="stylesheet" href="components/buttons.css">
-    <link rel="stylesheet" href="components/forms.css">
-    <link rel="stylesheet" href="layouts/layout-login.css">
+    <link rel="stylesheet" href="styles/ui/global.css">
+    <link rel="stylesheet" href="styles/ui/buttons.css">
+    <link rel="stylesheet" href="styles/ui/forms.css">
+    <link rel="stylesheet" href="styles/layouts/dashboard/login.css">
     <title>My login form</title>
 </head>
 
