--- a/component_based_css_test/login.html
+++ b/component_based_css_test/login.html
@@ -5,8 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/ui/global.css">
-    <link rel="stylesheet" href="styles/ui/buttons.css">
-    <link rel="stylesheet" href="styles/ui/forms.css">
+    <link rel="stylesheet" href="styles/ui/button.css">
+    <link rel="stylesheet" href="styles/ui/form.css">
+    <link rel="stylesheet" href="styles/ui/label.css">
+    <link rel="stylesheet" href="styles/ui/input.css">
+    <link rel="stylesheet" href="styles/ui/small.css">
     <link rel="stylesheet" href="styles/layouts/dashboard/login.css">
     <title>My login form</title>
 </head>
