feat: added a,h and made it responsive

--- a/component_based_css_test/login.html
+++ b/component_based_css_test/login.html
@@ -4,18 +4,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles/layouts/dashboard/login.css">
     <link rel="stylesheet" href="styles/ui/global.css">
-    <link rel="stylesheet" href="styles/ui/button.css">
     <link rel="stylesheet" href="styles/ui/form.css">
+    <link rel="stylesheet" href="styles/ui/headings.css">
     <link rel="stylesheet" href="styles/ui/label.css">
     <link rel="stylesheet" href="styles/ui/input.css">
     <link rel="stylesheet" href="styles/ui/small.css">
-    <link rel="stylesheet" href="styles/layouts/dashboard/login.css">
+    <link rel="stylesheet" href="styles/ui/button.css">
+    <link rel="stylesheet" href="styles/ui/a.css">
     <title>My login form</title>
 </head>
 
 <body>
     <main>
+        <h1>Sign in to your account</h1>
         <form>
             <label for="name">Username</label>
             <input type="text" name="name" placeholder="Name">
@@ -28,6 +31,7 @@
             <small>The phone field is disabled</small>
             <button type="submit" name="submit">Submit</button>
         </form>
+        <small>Not a member? <a href="#">Start a 14 day free trial</a></small>
     </main>
 </body>
 
